kubernetes-template/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 8505
    targetPort: 8505
  type: ClusterIP
